# csParallelTask

./: CMakeLists.txt  LICENSE  README.md  compile_execute_main.cmd  csPARGS.h  csPERF_MEASUREMENT.h
docs/: csParallelTask_API.md
include/: csPARALLEL.h  csParallel.h  csParallel_.h  csPargs_.h  csPerfChecker.h
others/: MatrixMult.cpp  MatrixMult2.cpp
scripts/: build.cmd  compile_execute_main.cmd  plot_benchmark.py  run_benchmark.cmd  sortie.txt
src/: csPARALLEL.cpp  csPARGS.cpp  csPERF_MEASUREMENT.cpp  csParallel.cpp  csPargs_.cpp  csPerfChecker.cpp  main.cpp
test/: MatrixMult.cpp  MatrixMult_Perf_Compare.cpp
